Fixed #20. Added text-align to docked block

--- a/style/layout/_dock.css
+++ b/style/layout/_dock.css
@@ -112,7 +112,7 @@
     padding:8px 8px 8px;
     }
     .dockeditempanel_bd .block_docked {
-
+        text-align:left;
         }
     .dockeditempanel_bd .content {
         
